# accountsservice-rs

./: Cargo.toml  README.md
accountsservice/: Cargo.toml  Gir.toml
accountsservice-gir-files/: AccountsService-1.0.gir
accountsservice/src/: lib.rs
accountsservice/src/auto/: enums.rs  mod.rs  user.rs  user_manager.rs
accountsservice/sys/: Cargo.toml  Gir.toml  build.rs
accountsservice/sys/src/: lib.rs
accountsservice/sys/src/auto/: versions.txt
accountsservice/sys/tests/: abi.rs  constant.c  layout.c  manual.h
