[workspace]
resolver = "3"
members = ["accountsservice", "accountsservice/sys"]
exclude = ["gir"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Zayn Chen <zaynchen@qq.com>"]
categories = ["api-bindings"]
repository = "https://github.com/zaynchen/accountsservice-rs"
license = "GPL-3.0-or-later"
keywords = ["accountsservice"]
exclude = ["gir-files/*", "accountsservice-gir-files"]

[workspace.dependencies]
gobject-sys = { git = "https://github.com/gtk-rs/gtk-rs-core.git", branch = "main", version = "0.22" }
glib-sys = { git = "https://github.com/gtk-rs/gtk-rs-core.git", branch = "main", version = "0.22" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core.git", branch = "main", version = "0.22" }
gio-sys = { git = "https://github.com/gtk-rs/gtk-rs-core.git", branch = "main", version = "0.22" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core.git", branch = "main", version = "0.22" }
