[package]
name = "accountsservice-sys"
build = "build.rs"
description = "FFI bindings for accountsservice"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.authors]
workspace = true

[package.categories]
workspace = true

[package.repository]
workspace = true

[package.license]
workspace = true

[package.keywords]
workspace = true

[package.exclude]
workspace = true

[package.metadata.system-deps.accountsservice]
name = "accountsservice"
version = "23.13.0"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
all-features = true

[lib]
name = "accountsservice_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
workspace = true

[dependencies.gio-sys]
workspace = true

[dependencies.gobject-sys]
workspace = true

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
